<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2012, 2013 Devin Collins <agent1709@gmail.com>,
Bobby Ore <bob1987@gmail.com>, Casey Stark <starkca90@gmail.com>

This file is part of MyTLC Sync.

MyTLC Sync is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MyTLC Sync is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MyTLC Sync.  If not, see <http://www.gnu.org/licenses/>. -->
<resources>
    <string name="url">https://mytlc.bestbuy.com</string>
    <string name="bbyopenApi">yuptvvgha79f4xw4nvntbcpv</string>
    <string name="address">Address</string>
    <string name="alarm_default">Use Default Settings</string>
    <string name="alarm_disable">No alarm</string>
    <string name="alarm_settings">Choose alarm settings&#8230;</string>
    <string name="app_name">MyTLC Sync</string>
    <string name="check_at">Check at:</string>
    <string name="check_calendar">Check Calendar</string>
    <string name="chkbx"> Remember Me</string>
    <string name="choose_check_settings">Sync on these days</string>
    <string name="clear_account">Clear Account</string>
    <string name="current_location">Use Current Location</string>
    <string name="current_sync_time">Check schedule at</string>
    <string name="default_calendar">Default Calendar&#8230;</string>
    <string name="event_title">Event Title</string>
    <string name="event_title_expanded">Title for events on your calendar</string>
    <string name="file">user_data</string>
    <string name="get_address">Get Address</string>
    <string name="login">Login</string>
    <string name="no_sync_time">No time set for schedule</string>
    <string name="pass" >Password </string>
    <string name="saveSettings">Save Settings</string>
    <string name="settings">Settings</string>
    <string name="settings_name">Settings</string>
    <string name="store_number">Store Number</string>
    <string name="sync_daily">Check schedule every day @</string>
    <string name="sync_weekly">Check schedule every week on</string>
    <string name="theme">Set theme</string>
    <string name="timezone_settings">Adjust calendar hours</string>
    <string name="user">Username </string>
    <string name="weekly_button">Pick time</string>

    <string-array name="alarms">
        <item>None</item>
        <item>5 Minutes Before</item>
        <item>15 Minutes Before</item>
        <item>30 Minutes Before</item>
        <item>1 Hour before</item>
        <item>2 Hours Before</item>
        <item>3 Hours Before</item>
    </string-array>

    <string-array name="changes">
        <item>&#x2022; 1.14 - Added support for latest MyTLC upgrade</item>
        <item>&#x2022; 1.14 - Removed excess white characters where not needed</item>
        <item>&#x2022; 1.14.1 - Added status message from MyTLC</item>
        <item>&#x2022; 1.14.2 - Added ability to add custom names to events</item>
        <item>&#x2022; 1.14.2 - Duplicate shifts are no longer displayed as "new" shifts</item>
    </string-array>

    <string-array name="daysOfWeek">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="sync">
        <item>None</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="themes">
        <item>Blue/White</item>
        <item>Orange/Black</item>
        <item>Red/White</item>
        <item>Light Blue/White</item>
        <!--<item>Yellow/Black</item>-->
    </string-array>

    <string-array name="timezones">
        <item>-5</item>
        <item>-4</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
