<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/SettingsText"
            android:text="@string/default_calendar" />
        <Spinner
            android:id="@+id/spinCals"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/llSync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/SettingsText"
                android:text="@string/choose_check_settings" />
            <Spinner
                android:id="@+id/spinSync"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/llDailySync"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:id="@+id/txtDailySync"
                    style="@style/SettingsText" />
                <Button
                    android:id="@+id/btnDaily"
                    android:text="@string/weekly_button"
                    style="@style/SettingsText" />
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/llWeeklySync"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                <TextView
                    style="@style/SettingsText"
                    android:text="@string/sync_weekly" />
                <Spinner
                    android:id="@+id/spinWeekly"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/txtWeeklySync"
                        style="@style/SettingsText" />
                    <Button
                        android:id="@+id/btnWeekly"
                        android:text="@string/weekly_button"
                        style="@style/SettingsText" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llAlarmSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/SettingsText"
                android:text="@string/alarm_settings" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Spinner
                    android:id="@+id/spinNotifications"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                style="@style/SettingsText"
                android:text="@string/theme" />
            <Spinner
                android:id="@+id/spinTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/SettingsText"
                android:text="@string/timezone_settings" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spinTimezone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/txtStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/store_number" />
                <Button
                    android:id="@+id/btnGetStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_address"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/txtAddress"
                    android:hint="@string/address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>