<?xml version="1.0" encoding="utf-8"?>

<!--Copyright 2012, 2013 Devin Collins <agent1709@gmail.com>,
Bobby Ore <bob1987@gmail.com>, Casey Stark <starkca90@gmail.com>

This file is part of MyTLC Sync.

MyTLC Sync is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MyTLC Sync is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MyTLC Sync.  If not, see <http://www.gnu.org/licenses/>. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp">
    <ImageView
        android:layout_width="269dp"
        android:layout_height="324dp"
        android:id="@+id/logo"
        android:src="@drawable/mytlc_logo_blue"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/user"/>
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/pass"/>
        <CheckBox
            android:id="@+id/remember"
            style="@style/DefaultText"
            android:text="@string/chkbx" />
        <TextView
            android:id="@+id/results"
            style="@style/ResultText"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <!--    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">
            <com.google.ads.AdView
                xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
                android:id="@+id/ad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                googleads:adSize="BANNER"
                googleads:adUnitId="@string/admob_id" />
        </LinearLayout>-->
</LinearLayout>